CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN_NOTES__c.object
<CustomObject>
    <description>County Plan Notes</description>
    <fields>
        <fullName>BODY__c</fullName>
        <description>Body</description>
        <label>Body</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDN_COUNTY_PLAN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>County Plan</description>
        <label>County Plan</label>
        <referenceTo>T_COUNTY_PLAN__c</referenceTo>
        <relationshipLabel>County Plan Notes</relationshipLabel>
        <relationshipName>County_Plan5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SUBJECT__c</fullName>
        <description>Subject</description>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>County Plan Notes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County Plan Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Body_Field_Required_Validation_Rule</fullName>
        <active>true</active>
        <description>Body field  cannot be empty</description>
        <errorConditionFormula>ISBLANK( BODY__c )</errorConditionFormula>
        <errorDisplayField>BODY__c</errorDisplayField>
        <errorMessage>Body cannot be empty</errorMessage>
    </validationRules>
</CustomObject>