CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN_NOTES__c/validationRules/Body_Field_Required_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Body_Field_Required_Validation_Rule</fullName>
    <active>true</active>
    <description>Body field  cannot be empty</description>
    <errorConditionFormula>ISBLANK( BODY__c )</errorConditionFormula>
    <errorDisplayField>BODY__c</errorDisplayField>
    <errorMessage>Body cannot be empty</errorMessage>
</ValidationRule>